--- a/app/src/main/assets/fhconfig.properties
+++ b/app/src/main/assets/fhconfig.properties
@@ -1,5 +1,5 @@
-host = https://aerogear-t.sandbox.feedhenry.com
-appid = qhnbeom6czw22cnpczqfis52
-projectid = qhnbeoifgvnos7izeu3jx5hg
-appkey = b25d5cc20e306183d3495a9f4920d07902112cf3
+host = https://testing.feedhenry.me
+appid = 67ymnwkhwxnp2jpqbwakpkli
+projectid = 67ymnwkd4rbntugl2qd4iqx7
+appkey = 5169404d3d1b6c91ea533270c7b03e17f94a6ca4
 connectiontag = 0.0.1
