--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.0.+'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.feedhenry:fh-android-sdk:3.0.0-SNAPSHOT'
+    compile 'com.google.code.gson:gson:2.4'
 }
