--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,6 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.feedhenry:fh-android-sdk:3.0.0-SNAPSHOT'
     compile 'com.google.code.gson:gson:2.4'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+
 }
