--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,10 @@ dependencies {
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:support-v4:23.1.0'
+    compile 'org.jboss.aerogear:aerogear-android-pipe:2.1.1'
+    compile 'org.jboss.aerogear:aerogear-android-auth:2.1.0'
+    compile 'com.squareup.dagger:dagger:1.2.+'
+    provided 'com.squareup.dagger:dagger-compiler:1.2.+'
+    compile 'com.squareup:otto:1.3.8'
+
 }
