--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,9 +39,13 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:support-v4:23.1.0'
     compile 'org.jboss.aerogear:aerogear-android-pipe:2.1.1'
-    compile 'org.jboss.aerogear:aerogear-android-auth:2.1.0'
     compile 'com.squareup.dagger:dagger:1.2.+'
     provided 'com.squareup.dagger:dagger-compiler:1.2.+'
     compile 'com.squareup:otto:1.3.8'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.squareup.okhttp:okhttp:2.+'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:2.+'
+    compile 'com.squareup.okio:okio:1.+'
+
 
 }
