--- a/app/src/main/assets/fhconfig.properties
+++ b/app/src/main/assets/fhconfig.properties
@@ -1,5 +1,5 @@
-host = https://testing.feedhenry.me
-appid = 67ymnwkhwxnp2jpqbwakpkli
-projectid = 67ymnwkd4rbntugl2qd4iqx7
-appkey = 5169404d3d1b6c91ea533270c7b03e17f94a6ca4
+host = https://aerogear-t.sandbox.feedhenry.com
+appid = rdgc7cy4cd5mtnqg5o7jpchi
+projectid = rdgc7c4v3hphfukwu736gh6b
+appkey = 13b3ac44fe922dd9f8b35c00003b134add670c2
 connectiontag = 0.0.1
