--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,13 @@
 
 buildscript {
     repositories {
+        mavenLocal()
         jcenter()
+        google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.0'
+        classpath 'com.android.tools.build:gradle:3.0.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -15,11 +17,13 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
-        mavenCentral()
         mavenLocal()
+        jcenter()
+        google()
+        mavenCentral()
     }
 }
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
