--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,11 +9,12 @@ android {
     buildToolsVersion '27.0.3'
 
     defaultConfig {
-        applicationId "org.feedhenry.apps.arthenry"
-        minSdkVersion 16
-        targetSdkVersion 23
+        applicationId "org.aerogear.apps.memeolist"
+        minSdkVersion 21
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
+        manifestPlaceholders = ["appAuthRedirectScheme": "org.aerogear.apps.memeolist"]
     }
     buildTypes {
         release {
@@ -26,27 +27,30 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    testImplementation 'junit:junit:4.12'
 
-    compile 'com.android.support:appcompat-v7:27.1.1'
-    compile 'com.android.support:design:27.1.1'
-    compile 'com.android.support:cardview-v7:27.1.1'
-    compile 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.jakewharton:butterknife:7.0.1'
     annotationProcessor 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.feedhenry:fh-android-sdk:3.3.3'
-    compile 'com.google.code.gson:gson:2.4'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.android.support:support-v4:27.1.1'
-    compile 'org.jboss.aerogear:aerogear-android-pipe:2.1.1'
-    compile 'com.squareup.dagger:dagger:1.2.5'
+    implementation 'com.google.code.gson:gson:2.4'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.squareup.dagger:dagger:1.2.5'
     annotationProcessor 'com.squareup.dagger:dagger-compiler:1.2.5'
-    compile 'com.squareup:otto:1.3.8'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.squareup.okhttp:okhttp:2.+'
-    compile 'com.squareup.okhttp:okhttp-urlconnection:2.+'
-    compile 'com.squareup.okio:okio:1.+'
+    implementation 'com.squareup:otto:1.3.8'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.squareup.okio:okio:1.+'
+
+    implementation "org.aerogear:android-core:1.0.0-alpha.2"
+    implementation ('org.aerogear:android-auth:1.0.0-alpha.2') {
+        exclude group: 'com.android.support'
+    }
+    implementation "org.aerogear:android-security:1.0.0-alpha.2"
+    implementation "org.aerogear:android-push:1.0.0-alpha.2"
 
 
 }
