--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'com.android.tools.build:gradle:3.2.0-beta01'
         classpath 'com.apollographql.apollo:apollo-gradle-plugin:0.5.0'
 
         // NOTE: Do not place your application dependencies here; they belong
